--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eclimo - Weather Based Lifestyle Recommendations</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="container">
     <!-- Logo Added Here -->
-    <img src="logo.png" alt="Eclimo Logo" class="logo">
+    <img src="/logo.png" alt="Eclimo Logo" class="logo">
     <h1>Eclimo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
