update folder structure and vercel.json updated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <img src="./statics/images/logo.png" alt="Eclimo Logo" class="logo">
     <h1>Eclimo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
+    
+    <p class="description">
+      Eclimo is designed to provide you with adaptive lifestyle recommendations based on real-time weather data. 
+      Whether it's about choosing the right clothing, skincare routines, or the best activities to enjoy indoors or outdoors, 
+      this platform helps you make informed decisions tailored to the current weather in your city.
+    </p>
 
     <input type="text" id="city" class="input-field" placeholder="Enter City">
     <button class="btn" onclick="getWeather()">Get Weather</button>
