update folder structure and vercel.json updated

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h3>Weather Based Lifestyle Recommendations</h3>
     
     <p class="description">
-      Eclimo is designed to provide you with adaptive lifestyle recommendations based on real-time weather data. 
-      Whether it's about choosing the right clothing, skincare routines, or the best activities to enjoy indoors or outdoors, 
+      Eclimo is designed to provide you with adaptive lifestyle recommendations based on real-time weather data. <br>
+      Whether it's about choosing the right clothing, skincare routines, or the best activities to enjoy indoors or outdoors, <br>
       this platform helps you make informed decisions tailored to the current weather in your city.
     </p>
 
