update folder structure and vercel.json updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <p class="description">
       Eclimo is designed to provide you with adaptive lifestyle recommendations based on real-time weather data. <br>
       Whether it's about choosing the right clothing, skincare routines, or the best activities to enjoy indoors or outdoors, <br>
-      this platform helps you make informed decisions tailored to the current weather in your city.
+      this platform helps you make informed decisions tailored to the current weather in your city. <br>
+      Additionally, Eclimo suggests suitable yoga postures to enhance your well-being in harmony with the prevailing weather conditions.
     </p>
 
     <input type="text" id="city" class="input-field" placeholder="Enter City">
