update the vercel.json file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <img src="./statics/images/logo.png" alt="Eclimo Logo" class="logo">
+    
     <h1>Eclimo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
@@ -25,6 +25,7 @@
 
     <input type="text" id="city" class="input-field" placeholder="Enter City">
     <button class="btn" onclick="getWeather()">Get Weather</button>
+    <button class="btn" onclick="reloadPage()">Reload</button> <!-- Reload button -->
 
     <div id="weather-result" class="result">
       <p><strong>Weather:</strong> <span id="weather-condition"></span></p>
