--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 
 <body>
   <div class="container">
-    
+    <!-- Logo Section (Logo added on top of Eclimo) -->
+    <div class="logo-container">
+      <img src="./statics/images/logop.png" alt="Logo" class="logo">
+    </div>
+
+    <!-- Main Heading -->
     <h1>Eclimo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
+    <!-- Navigation Bar -->
     <nav>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
@@ -23,10 +29,16 @@
       </ul>
     </nav>
 
-    <input type="text" id="city" class="input-field" placeholder="Enter City">
-    <button class="btn" onclick="getWeather()">Get Weather</button>
-    <button class="btn" onclick="reloadPage()">Reload</button> <!-- Reload button -->
+    <!-- Input and Buttons Section -->
+    <div class="input-section">
+      <input type="text" id="city" class="input-field" placeholder="Enter City">
+      <div class="btn-group">
+        <button class="btn" onclick="getWeather()">Get Weather</button>
+        <button class="btn" onclick="reloadPage()">Reload</button>
+      </div>
+    </div>
 
+    <!-- Weather Result Section -->
     <div id="weather-result" class="result">
       <p><strong>Weather:</strong> <span id="weather-condition"></span></p>
       <p><strong>Temperature:</strong> <span id="temperature"></span>°C</p>
