--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="mood.html">Mood-Based Recommendations</a></li> <!-- NEW MOOD OPTION -->
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html"class="active">About</a></li>
         <li><a href="features.html">Features</a></li>
         <li><a href="technologies.html">Technologies</a></li>
       </ul>
