--- a/features.html
+++ b/features.html
@@ -19,7 +19,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="mood.html">Mood-Based Recommendations</a></li> <!-- NEW MOOD OPTION -->
         <li><a href="about.html">About</a></li>
-        <li><a href="features.html">Features</a></li>
+        <li><a href="features.html"class="active">Features</a></li>
         <li><a href="technologies.html">Technologies</a></li>
       </ul>
     </nav>
