--- a/mood.html
+++ b/mood.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="mood.html">Mood-Based Recommendations</a></li> <!-- NEW MOOD OPTION -->
+        <li><a href="mood.html"class="active">Mood-Based Recommendations</a></li> <!-- NEW MOOD OPTION -->
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
         <li><a href="technologies.html">Technologies</a></li>
