--- a/technologies.html
+++ b/technologies.html
@@ -20,7 +20,7 @@
         <li><a href="mood.html">Mood-Based Recommendations</a></li> <!-- NEW MOOD OPTION -->
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="technologies.html">Technologies</a></li>
+        <li><a href="technologies.html"class="active">Technologies</a></li>
       </ul>
     </nav>
 
