update the vercel.json file

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     
-    <h1>Eclimo</h1>
+    <h1>E-Climo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
     <nav>
@@ -27,7 +27,7 @@
     <section class="about">
       <h2>About the Project</h2>
       <ul>
-        <li>Eclimo is an innovative platform that provides personalized lifestyle recommendations based on real-time weather data.</li>
+        <li>E-Climo is an innovative platform that provides personalized lifestyle recommendations based on real-time weather data.</li>
         <li>Empowers users to make daily decisions aligned with the current weather in their location.</li>
         <li>Recommendations include clothing choices, skincare routines, and activities tailored to the weather.</li>
       </ul>
