--- a/features.html
+++ b/features.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
    
-    <h1>Eclimo</h1>
+    <h1>E-Climo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
     <nav>
@@ -31,6 +31,7 @@
         <li><strong>Lifestyle Recommendations:</strong> Offers tailored advice such as clothing and activity recommendations.</li>
         <li><strong>Yoga Postures:</strong> Suggests yoga postures designed to enhance physical and mental well-being.</li>
         <li><strong>Personalized Experience:</strong> Location-specific recommendations for enhanced accuracy.</li>
+        <li><strong>Mood Recommendation:</strong> Provides yoga poses and activities based on the mood options.</li>
       </ul>
     </section>
   </div>
