--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eclimo - Weather & Mood-Based Lifestyle Recommendations</title>
+  <title>E-Climo - Weather-Based Lifestyle Recommendations</title>
   <link rel="stylesheet" href="./statics/css/style.css">
 </head>
 
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Main Heading -->
-    <h1>Eclimo</h1>
+    <h1>E-Climo</h1>
     <h3>Weather & Mood-Based Lifestyle Recommendations</h3>
 
     <!-- Navigation Bar -->
