--- a/mood.html
+++ b/mood.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <h1>Eclimo</h1>
+    <h1>E-Climo</h1>
     <h3>Weather Based Lifestyle Recommendations</h3>
 
     <nav>
